Refactor package structure: Move classes from presentation to adapter.in.web and update import paths